--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>将棋の殿堂</title>
-    <link rel="stylesheet" href="style.css?v=20251103-e">
+    <link rel="stylesheet" href="style.css?v=20251104-a">
 </head>
 <body>
 <header>
@@ -22,6 +22,11 @@
     <option value="kishi-no">棋士番号</option>
     <option value="age">年齢（享年）</option>
     <option value="age-4d">四段昇段年齢</option>
+    <option value="age-5d">五段昇段年齢</option>
+    <option value="age-6d">六段昇段年齢</option>
+    <option value="age-7d">七段昇段年齢</option>
+    <option value="age-8d">八段昇段年齢</option>
+    <option value="age-9d">九段昇段年齢</option>
   </select>
 
   <!-- 昇順・降順（選んだだけで即反映） -->
@@ -46,54 +51,49 @@
 
 <script>
 // =======================================
-// profile.html script（四段昇段年齢モード追加版）
+// profile.html script（四〜九段 昇段年齢モード 追加版）
 //
-// セレクトで扱う値：
-//  - sekiji        … 区分・席次・棋士名・段位/称号
-//  - kishi-no      … 区分・棋士番号・棋士名・段位/称号
-//  - age           … 区分・棋士名・年齢・生年月日
-//  - age-4d        … 棋士名・四段昇段年齢・生年月日・四段昇段日  ← NEW
+// セレクト値：
+//  - sekiji      … 区分・席次・棋士名・段位/称号
+//  - kishi-no    … 区分・棋士番号・棋士名・段位/称号
+//  - age         … 区分・棋士名・年齢（享年含む）・生年月日
+//  - age-4d..9d  … 区分・棋士名・◯段昇段年齢・◯段昇段日
 //
-// ラジオ（name="order"）で扱う値：
-//  - keep   … 席次順のまま
-//  - asc    … 選択中の項目を昇順
-//  - desc   … 選択中の項目を降順
+// ラジオ(name="order")：keep | asc | desc
+//  - keep … 席次順のまま（セレクト切替しても席次順維持・列だけ切替）
+//  - asc/desc … セレクトで選んだ指標で並び替え
 // =======================================
 
 const CSV_URL = 'profile.csv';
 
 // 今日（ローカル）
-const today = (function() {
+const today = (() => {
   const d = new Date();
   return new Date(d.getFullYear(), d.getMonth(), d.getDate());
 })();
 
-// 席次でソートした“原本”
+// 席次順で固定保持する“原本”
 let baseData = [];
 
-// 今の表示モード
+// 現在のモード（セレクト）
 let currentMode = 'sekiji';
-
-// 今の並び順
+// 現在の並び（ラジオ）
 let currentOrder = 'keep';
 
+// ---- 初期化 ----
 fetch(CSV_URL)
   .then(res => res.text())
   .then(text => {
     const rows = parseCSV(text);
     const enriched = rows.map(r => enrichRow(r));
-    // 原本は席次で固定
     baseData = enriched.slice().sort((a, b) => toNumberSafe(a['席次']) - toNumberSafe(b['席次']));
-    // 初期表示
     renderTable(baseData, 'sekiji');
-    // UIイベント設定
     setupUI();
   })
   .catch(err => console.error('CSV読み込み失敗:', err));
 
-
 // -------------------------
-// CSV → 配列
+// CSV → 配列（列名で参照）
 // -------------------------
 function parseCSV(csvText) {
   const lines = csvText.trim().split(/\r?\n/);
@@ -113,10 +113,11 @@ function parseCSV(csvText) {
 }
 
 // -------------------------
-// 行の拡張
-// ・段位/称号
-// ・現在の年齢/享年（__age_days__, __age_display__）
-// ・四段昇段年齢（__age_at_4d_days__, __age_at_4d_display__）←追加
+// 行の拡張：段位/称号 + 年齢 + 各段昇段年齢（四〜九）
+// 生成キー：
+//  __dan_or_title__
+//  __age_days__, __age_display__
+//  __age_at_4d_days__/display__ 〜 __age_at_9d_days__/display__
 // -------------------------
 function enrichRow(row) {
   // 段位/称号
@@ -126,12 +127,11 @@ function enrichRow(row) {
 
   // 生年月日・没年月日
   const birth = toDateSafe(row['生年月日']);
-  const died = toDateSafe(row['没年月日']);
+  const died  = toDateSafe(row['没年月日']);
   const endDate = died ? died : today;
 
-  // ① 現在の年齢 or 享年
-  let ageDays = null;
-  let ageDisplay = '';
+  // 現在の年齢/享年
+  let ageDays = null, ageDisplay = '';
   if (birth) {
     ageDays = diffDays(birth, endDate);
     const { year, month, day } = diffYMD(birth, endDate);
@@ -139,27 +139,44 @@ function enrichRow(row) {
     ageDisplay = `${label}${year}歳${month}か月${day}日`;
   }
 
-  // ② 四段昇段年齢
+  // 段ごとの昇段日
   const p4 = toDateSafe(row['四段昇段日']);
-  let age4dDays = null;
-  let age4dDisplay = '';
-  if (birth && p4) {
-    age4dDays = diffDays(birth, p4);
-    const ymd4 = diffYMD(birth, p4);
-    age4dDisplay = `${ymd4.year}歳${ymd4.month}か月${ymd4.day}日`;
-  }
+  const p5 = toDateSafe(row['五段昇段日']);
+  const p6 = toDateSafe(row['六段昇段日']);
+  const p7 = toDateSafe(row['七段昇段日']);
+  const p8 = toDateSafe(row['八段昇段日']);
+  const p9 = toDateSafe(row['九段昇段日']);
+
+  // 各段昇段年齢を生成する小関数
+  const makeAgeAt = (toDate) => {
+    if (!birth || !toDate) return { days: null, text: '' };
+    const days = diffDays(birth, toDate);
+    const { year, month, day } = diffYMD(birth, toDate);
+    return { days, text: `${year}歳${month}か月${day}日` };
+  };
+
+  const a4 = makeAgeAt(p4);
+  const a5 = makeAgeAt(p5);
+  const a6 = makeAgeAt(p6);
+  const a7 = makeAgeAt(p7);
+  const a8 = makeAgeAt(p8);
+  const a9 = makeAgeAt(p9);
 
   return Object.assign({}, row, {
     '__dan_or_title__': danOrTitle,
     '__age_days__': ageDays,
     '__age_display__': ageDisplay,
-    '__age_at_4d_days__': age4dDays,
-    '__age_at_4d_display__': age4dDisplay
+    '__age_at_4d_days__': a4.days, '__age_at_4d_display__': a4.text,
+    '__age_at_5d_days__': a5.days, '__age_at_5d_display__': a5.text,
+    '__age_at_6d_days__': a6.days, '__age_at_6d_display__': a6.text,
+    '__age_at_7d_days__': a7.days, '__age_at_7d_display__': a7.text,
+    '__age_at_8d_days__': a8.days, '__age_at_8d_display__': a8.text,
+    '__age_at_9d_days__': a9.days, '__age_at_9d_display__': a9.text
   });
 }
 
 // -------------------------
-// 日付
+// 日付ユーティリティ（ローカル基準）
 // -------------------------
 function toDateSafe(str) {
   if (!str) return null;
@@ -169,18 +186,13 @@ function toDateSafe(str) {
 }
 
 function diffDays(a, b) {
+  if (!a || !b) return null;
   return Math.floor((b.getTime() - a.getTime()) / 86400000);
 }
 
-// 2つの日付から「◯歳◯か月◯日」を作る
 function diffYMD(from, to) {
-  let y1 = from.getFullYear();
-  let m1 = from.getMonth();
-  let d1 = from.getDate();
-
-  let y2 = to.getFullYear();
-  let m2 = to.getMonth();
-  let d2 = to.getDate();
+  let y1 = from.getFullYear(), m1 = from.getMonth(), d1 = from.getDate();
+  let y2 = to.getFullYear(),   m2 = to.getMonth(),   d2 = to.getDate();
 
   let year = y2 - y1;
   let month = m2 - m1;
@@ -208,11 +220,9 @@ function setupUI() {
   const sel = section.querySelector('select');
   const radios = section.querySelectorAll('input[type="radio"][name="order"]');
 
-  // ★ セレクトに「四段昇段年齢」を足す場合はHTML側でも<option value="age-4d">四段昇段年齢</option>を追加しておく
-
-  // セレクトを変えたら：表示を切り替え、ラジオがasc/descなら並べ替えもする
+  // セレクト切替：列のみ切替。ラジオがasc/descなら並び替えも適用。
   sel.addEventListener('change', () => {
-    currentMode = sel.value; // sekiji | kishi-no | age | age-4d
+    currentMode = sel.value; // sekiji | kishi-no | age | age-4d..age-9d
     if (currentOrder === 'keep') {
       renderTable(baseData, currentMode);
     } else {
@@ -221,14 +231,12 @@ function setupUI() {
     }
   });
 
-  // ラジオを変えたら：その場で並べ替え
+  // ラジオ切替：keepなら席次順に戻す／asc,descなら現在モードでソート
   radios.forEach(r => {
     r.addEventListener('change', () => {
       if (!r.checked) return;
       currentOrder = r.value; // keep | asc | desc
-
       if (currentOrder === 'keep') {
-        // 席次に戻す（表示モードは維持）
         renderTable(baseData, currentMode);
       } else {
         const sorted = sortData(baseData, currentMode, currentOrder);
@@ -249,21 +257,18 @@ function sortData(data, mode, order) {
     copied.sort((a, b) => (toNumberSafe(a['棋士番号']) - toNumberSafe(b['棋士番号'])) * dir);
   } else if (mode === 'age') {
     copied.sort((a, b) => {
-      const aa = a['__age_days__'];
-      const bb = b['__age_days__'];
-      const aNull = (aa === null || typeof aa === 'undefined');
-      const bNull = (bb === null || typeof bb === 'undefined');
+      const aa = a['__age_days__'], bb = b['__age_days__'];
+      const aNull = (aa == null), bNull = (bb == null);
       if (aNull && bNull) return 0;
       if (aNull) return 1;
       if (bNull) return -1;
       return (aa - bb) * dir;
     });
-  } else if (mode === 'age-4d') {
+  } else if (mode === 'age-4d' || mode === 'age-5d' || mode === 'age-6d' || mode === 'age-7d' || mode === 'age-8d' || mode === 'age-9d') {
+    const key = mode.replace('age-', '__age_at_') + '_days__'; // 例: age-5d → __age_at_5d_days__
     copied.sort((a, b) => {
-      const aa = a['__age_at_4d_days__'];
-      const bb = b['__age_at_4d_days__'];
-      const aNull = (aa === null || typeof aa === 'undefined');
-      const bNull = (bb === null || typeof bb === 'undefined');
+      const aa = a[key], bb = b[key];
+      const aNull = (aa == null), bNull = (bb == null);
       if (aNull && bNull) return 0;
       if (aNull) return 1;
       if (bNull) return -1;
@@ -273,7 +278,6 @@ function sortData(data, mode, order) {
     // 席次
     copied.sort((a, b) => (toNumberSafe(a['席次']) - toNumberSafe(b['席次'])) * dir);
   }
-
   return copied;
 }
 
@@ -292,6 +296,7 @@ function renderTable(rows, mode) {
   const tbody = table.querySelector('tbody');
 
   let cols;
+
   if (mode === 'age') {
     cols = [
       { key: '区分', label: '区分' },
@@ -299,20 +304,30 @@ function renderTable(rows, mode) {
       { key: '__age_display__', label: '年齢' },
       { key: '生年月日', label: '生年月日' }
     ];
-  } else if (mode === 'age-4d') {
-    // ★ 四段昇段年齢モード
-    cols = [
-    { key: '区分', label: '区分' },
-    { key: '棋士名', label: '棋士名' },
-    { key: '__age_at_4d_display__', label: '四段昇段年齢' },  
-    { key: '四段昇段日', label: '四段昇段日' }
-    ];
   } else if (mode === 'kishi-no') {
     cols = [
       { key: '区分', label: '区分' },
       { key: '棋士番号', label: '棋士番号' },
       { key: '棋士名', label: '棋士名' },
       { key: '__dan_or_title__', label: '段位/称号' }
+    ];
+  } else if (mode === 'age-4d' || mode === 'age-5d' || mode === 'age-6d' || mode === 'age-7d' || mode === 'age-8d' || mode === 'age-9d') {
+    // ◯段昇段年齢モード（共通レイアウト）
+    // ラベルと日付列名を段に応じて変える
+    const rankMap = {
+      'age-4d': { label: '四段昇段年齢', dateCol: '四段昇段日', displayKey: '__age_at_4d_display__' },
+      'age-5d': { label: '五段昇段年齢', dateCol: '五段昇段日', displayKey: '__age_at_5d_display__' },
+      'age-6d': { label: '六段昇段年齢', dateCol: '六段昇段日', displayKey: '__age_at_6d_display__' },
+      'age-7d': { label: '七段昇段年齢', dateCol: '七段昇段日', displayKey: '__age_at_7d_display__' },
+      'age-8d': { label: '八段昇段年齢', dateCol: '八段昇段日', displayKey: '__age_at_8d_display__' },
+      'age-9d': { label: '九段昇段年齢', dateCol: '九段昇段日', displayKey: '__age_at_9d_display__' }
+    };
+    const cfg = rankMap[mode];
+    cols = [
+      { key: '区分', label: '区分' },
+      { key: '棋士名', label: '棋士名' },
+      { key: cfg.displayKey, label: cfg.label },
+      { key: cfg.dateCol, label: cfg.dateCol }
     ];
   } else {
     // sekiji
