--- a/profile.html
+++ b/profile.html
@@ -21,6 +21,7 @@
     <option value="sekiji">席次</option>
     <option value="kishi-no">棋士番号</option>
     <option value="age">年齢（享年）</option>
+    <option value="term-active">現役期間</option>
     <option value="age-4d">四段昇段年齢</option>
     <option value="age-5d">五段昇段年齢</option>
     <option value="age-6d">六段昇段年齢</option>
